Prevent double-gap when info-container empty

--- a/css/hole-ng.css
+++ b/css/hole-ng.css
@@ -283,7 +283,7 @@ thead { user-select: none }
 }
 
 main {
-    grid-template-rows: repeat(4, max-content) 1fr;
+    grid-template-rows: repeat(3, max-content) 1fr;
     /* Free a little more room than the default 1rem gap */
     gap: 0.5rem;
 }
@@ -298,7 +298,7 @@ main {
 #info-container {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 #pool {
